--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,12 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
-forge_version=31.1.0
-mcp_mappings=20200301-mixed-1.15.2
-minecraft_version=1.15.2
+mcp_mappings=20200112-1.14.3
+minecraft_version=1.14.4
+forge_version=28.1.116
 mod_version=0.0.0.1
-registrate_version=0.0.3.4
-noobutil_version=0.0.1.0
+jei_version=6.0.0.27
+patchouli_version=1.1-23.115
+registrate_version=0.0.3.32
+noobutil_version=0.0.0.8
