--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,43 @@
 buildscript {
     repositories {
-        mavenCentral()
         mavenLocal()
+        maven { url = 'http://files.minecraftforge.net/maven' }
+        jcenter()
+        mavenCentral()
         maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
+            url 'https://dogforce-games.com/maven'
         }
         maven {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+        maven {
+            url='https://dist.creeper.host/Sponge/maven'
+        }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.0.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
 plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
-
 apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'maven-publish'
+// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
+apply plugin: 'maven-publish'
+apply plugin: 'org.spongepowered.mixin'
 
 version = "${minecraft_version}-${mod_version}"
-group = "noobanidus.mods.extracobble"
-archivesBaseName = "extracobble"
-
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
-
-configurations {
-    shade
+if (System.getenv('BUILD_NUMBER') != null) {
+    version = "${minecraft_version}-${mod_version}-" + System.getenv('BUILD_NUMBER')
 }
+group = 'noobanidus.mods' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'extracobble'
 
-sourceSets.main.resources {
-    srcDir 'src/generated/resources'
-}
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
+
 
 minecraft {
     mappings channel: 'snapshot', version: "${mcp_mappings}"
@@ -45,12 +46,13 @@ minecraft {
 
     runs {
         client {
-            taskName 'runClient'
-
             workingDirectory project.file('run')
 
-            //property 'forge.logging.markers', 'CORE,REGISTRIES'
+            // Recommended logging data for a userdev environment
+
+            // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
+             properties 'mixin.env.disableRefMap': 'true'
 
             mods {
                 extracobble {
@@ -60,13 +62,13 @@ minecraft {
         }
 
         server {
-            taskName 'runServer'
-
             workingDirectory project.file('run')
 
-            //property 'forge.logging.markers', 'CORE,REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
+            // Recommended logging data for a userdev environment
 
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+            properties 'mixin.env.disableRefMap': 'true'
             mods {
                 extracobble {
                     source sourceSets.main
@@ -75,62 +77,59 @@ minecraft {
         }
 
         data {
-            taskName 'runData'
-
             workingDirectory project.file('run')
 
-            environment 'target', 'fmluserdevdata'
+            // Recommended logging data for a userdev environment
 
-            //property 'forge.logging.markers', 'CORE,REGISTRIES'
+            // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
+            properties 'mixin.env.disableRefMap': 'true'
+            args '--mod', 'extracobble', '--all', '--output', file('src/generated/resources/'), '--existing', sourceSets.main.resources.srcDirs[0]
 
             mods {
                 extracobble {
                     source sourceSets.main
                 }
             }
-
-            args '--mod', 'extracobble', '--all', '--output', '"' + rootProject.file('src/generated/resources/') + '"',
-                    '--existing', '"' + rootProject.file('src/main/resources') + '"'//, '--existing', '"' + rootProject.file('src/generated/resources') + '"'
-
         }
     }
 }
 
 repositories {
     maven {
-        url "http://maven.tterrag.com/"
-    }
-    maven { // JEI
-        url "https://dvs1.progwml6.com/files/maven"
+        url 'https://maven.mcmoddev.com'
     }
     maven {
         name = "Jared"
         url = "https://maven.blamejared.com"
     }
-}
-
-jar {
-    manifest {
-        attributes([
-            "Specification-Title": "ExtraCobble",
-            "Specification-Vendor": "Noobanidus",
-            "Specification-Version": "1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"noobanidus",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-        ])
+    maven {
+        url "http://maven.tterrag.com"
     }
+    maven {
+        // location of the maven that hosts JEI files
+        name = "Progwml6 maven"
+        url = "https://dvs1.progwml6.com/files/maven/"
+    }
+    maven {
+        name = "JER"
+        url = "https://dl.bintray.com/way2muchnoise/dev"
+    }
+    maven {url = 'https://repo.spongepowered.org/maven/'}
+
+    maven {url = 'https://dist.creeper.host/Sponge/maven'}
+    jcenter()
+    mavenCentral()
 }
 
+configurations {
+    shade
+}
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    compile fg.deobf("mezz.jei:jei-${jei_version}")
-
-    def registrate = "com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"
+    def registrate = "com.tterrag.registrate:Registrate:${registrate_version}"
     implementation fg.deobf(registrate)
     shade registrate
 
@@ -139,10 +138,28 @@ dependencies {
     shade noobutil
 }
 
+sourceSets.main.resources {
+    srcDir 'src/generated/resources'
+}
+
+jar {
+    manifest {
+        attributes([
+                "Specification-Title"     : "extracobble",
+                "Specification-Vendor"    : "mysticmodding",
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Vendor"   : "mysticmodding",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
+    }
+}
+
 shadowJar {
     configurations = [project.configurations.shade]
-    relocate 'com.tterrag.registrate', 'noobanidus.mods.repack_grindr.registrate'
-    relocate 'noobanidus.libs.noobutil', 'noobanids.libs.repack_grindr.noobutil'
+    relocate 'com.tterrag.registrate', 'noobanidus.mods.extracobble.repack.registrate'
+    relocate 'noobanidus.libs.noobutil', 'noobanidus.libs.repack_extracobble.noobutil'
     classifier ''
 }
 
@@ -153,5 +170,3 @@ reobf {
 }
 
 build.dependsOn reobfShadowJar
-
-
